# Python_and_Flask_Web_Apps_2025

./: README.md
Flask-SQLAlchemy-Bootstrap-Todo/: README.md  app.py  pyproject.toml
Flask-SQLAlchemy-Bootstrap-Todo/instance/: database.db
Flask-SQLAlchemy-Bootstrap-Todo/templates/: about.html  base.html  edit.html  index.html
Flask-SQLAlchemy-Login/: README.md  app.py  pyproject.toml
Flask-SQLAlchemy-Login/instance/: database.db
Flask-SQLAlchemy-Login/templates/: about.html  base.html  index.html  login.html  profile.html  register.html
Flask_Admin_Auth_Login/: README.md  app.py  forms.py  pyproject.toml
Flask_Admin_Auth_Login/instance/: database.db
Flask_Admin_Auth_Login/static/css/: style.css
Flask_Admin_Auth_Login/templates/: about.html  base.html  index.html  login.html  register.html
Flask_Admin_Auth_Login/templates/admin/: index.html
Flask_Admin_Login_SQLAlchemy/: README.md  app.py  pyproject.toml
Flask_Admin_Login_SQLAlchemy/instance/: database.db
Flask_Admin_Login_SQLAlchemy/static/css/: style.css
Flask_Admin_Login_SQLAlchemy/templates/: about.html  base.html  index.html  login.html  register.html
Flask_Admin_Login_SQLAlchemy/templates/admin/: index.html
Flask_Enumerated_List/: README.md  app.py  pyproject.toml
Flask_Enumerated_List/templates/: about.html  base.html  edit.html  index.html
Flask_HTML_Web_Forms/: README.md  app.py  pyproject.toml
Flask_HTML_Web_Forms/templates/: about.html  base.html  create.html  index.html
Flask_Login_SQLAlchemy_Bootstrap/: README.md  app.py  database.db  forms.py  pyproject.toml
Flask_Login_SQLAlchemy_Bootstrap/templates/: base.html  index.html  login.html  register.html
Flask_Login_SQLAlchemy_Bulma/: README.md  app.py  pyproject.toml
Flask_Login_SQLAlchemy_Bulma/instance/: database.db
Flask_Login_SQLAlchemy_Bulma/templates/: base.html  index.html  login.html  profile.html  signup.html
Flask_Login_SQLite/: README.md  app.py  init_db.py  pyproject.toml
Flask_Login_SQLite/data/: database.db
Flask_Login_SQLite/templates/: about.html  base.html  index.html  profile.html
Flask_Login_Std_Lib/: README.md  app.py  pyproject.toml
Flask_Login_Std_Lib/templates/: about.html  (+3 more)
Flask_Login_User_Model/: README.md  app.py  pyproject.toml
Flask_Login_WTForms_SQLite/: README.md  app.py  forms.py  pyproject.toml  schema.sql
Flask_Login_WTForms_SQLite/data/: database.db
Flask_Login_WTForms_SQLite/templates/: about.html  base.html  index.html  profile.html
Flask_Login_and_Register/: README.md  app.py  init_db.py  pyproject.toml  schema.sql
Flask_Mail_Contact_Form/: README.md  app.py  config.py  init_db.py  models.py  pyproject.toml
Flask_Mail_Example/: README.md  app.py  config.py  pyproject.toml
Flask_Mail_Example/static/css/: style.css
Flask_Mail_Example/templates/: about.html  base.html  index.html
Flask_Markdown_SQLite/: README.md  app.py  init_db.py  pyproject.toml  schema.sql
Flask_Markdown_SQLite/data/: database.db
Flask_Markdown_SQLite/templates/: base.html  create.html  index.html
Flask_Pillow_Generative_Art/: README.md  app.py  make_squares.py  palettes.json  pyproject.toml
Flask_Pillow_Generative_Art/static/css/: style.css
Flask_Pillow_Generative_Art/templates/: about.html  base.html  index.html
Flask_SQLAlchemey_Semantic_UI_Todo/: README.md  app.py  pyproject.toml
Flask_SQLAlchemy_HTMx_Bookstore/: README.md  app.py  config.py  database.db  models.py  pyproject.toml
Flask_SQLAlchemy_Many_to_Many_Booklist/: README.md  app.py  pyproject.toml
Flask_SQLAlchemy_One_to_Many_Blog/: README.md  app.py  pyproject.toml
Flask_SQLAlchemy_Student_List/: app.py  database.db  pyproject.toml
Flask_SQLAlchemy_Student_List/static/css/: style.css
Flask_SQLAlchemy_Student_List/templates/: about.html  base.html  create.html  edit.html  index.html  view.html
Flask_SQLite_Blog/: README.md  app.py  init_db.py  pyproject.toml  schema.sql
Flask_WTForms_Course_List/: README.md  app.py  forms.py  pyproject.toml
Flask_WTForms_Course_List/static/css/: style.css
Flask_WTForms_Course_List/templates/: about.html  base.html  create.html  index.html
Flask_WTForms_Login/: README.md  app.py  forms.py  pyproject.toml
Flask_WTForms_Login/instance/: database.db
Flask_WTForms_Login/static/css/: style.css
Flask_WTForms_Login/templates/: about.html  base.html  dashboard.html  login.html  register.html
Simple_Flask_Admin/: README.md  app.py  pyproject.toml
Simple_Flask_Admin/instance/: database.db
Simple_Flask_Admin/static/css/: style.css
Simple_Flask_Admin/templates/: base.html  edit.html  index.html
Simple_Flask_Admin/templates/admin/: index.html
Simple_Flask_Login/: README.md  app.py  pyproject.toml
Simple_Flask_Login/templates/: about.html  base.html  index.html  profile.html
(+57 files in other folders)
