[tool.poetry]
name = "flask-login-wtforms-sqlite"
version = "0.1.0"
description = ""
authors = ["Mike Jackson <perigran_falcon@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
