[tool.poetry]
name = "flask-mail-example"
version = "0.1.0"
description = ""
authors = ["Mike Jackson <perigran_falcon@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-mail = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
