[tool.poetry]
name = "flask-pillow-generative-art"
version = "0.1.0"
description = ""
authors = ["Mike Jackson <perigran_falcon@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
